--- a/index.html
+++ b/index.html
@@ -374,6 +374,10 @@ href="./img/Baby_Logo.png">
             <div class="card vocab" style="width: 15rem">
               <div class="card-header" style = "background-color: #ffd849"><img src="img/1v1v1.png" width="80%"></div>
               <ul id="list4" class="list-group list-group-flush">
+
+                <li class="list-group-item list-group-item-action ">
+                  <a href="./amisare-multiplayer/index.html">am / is / are</a>
+                </li>
                 <li class="list-group-item list-group-item-action ">
                   <a href="./theretheirtheyre-multiplayer/">there / their / they're</a>
                 </li>
@@ -388,6 +392,9 @@ href="./img/Baby_Logo.png">
                 </li>
                 <li class="list-group-item list-group-item-action ">
                   <a href="./atoninplace-multiplayer/">at / on / in (place)</a>
+                </li>
+                <li class="list-group-item list-group-item-action ">
+                  <a href="./onoffbackget-multiplayer/index.html">on / off / back / get</a>
                 </li>
                 <li class="list-group-item list-group-item-action ">
                   <a href="./apostrophepossession-multiplayer/">apostrophe of possession</a>
