--- a/onoffbackget-twoplayer/index.html
+++ b/onoffbackget-twoplayer/index.html
@@ -16,12 +16,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Am / Is / Are Multiplayer</title>
+    <title>On / off / back / get 1x1</title>
     <link rel="icon" href="../img/Baby_Logo.png" />
     <link href="../css/bootstrap.min.css" rel="stylesheet" />
     <!--new css file added-->
     <link rel="stylesheet" href="../css/fa/css/all.css">
-    <link rel="stylesheet" href="../css/layout-31-07.css" />
+    <link rel="stylesheet" href="../onoffbackget-twoplayer/style.css" />
 </head>
 
 <body>
@@ -39,28 +39,29 @@
                     <p>Timer</p>
                 </div>
             </div>
+
             <div class="row" id="answers">
                 <div class="col">
                     <div class="row">
-                        <div class="nameblk1 qblock optionblock tall" data-player="0" data-answer="am">
+                        <div class="nameblk1 qblock optionblock tall" data-player="0" data-answer="on">
                             <h2>Player 1:</h2>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="row">
-                        <div class="nameblk1 qblock optionblock tall" data-player="1" data-answer="is">
+                        <div class="nameblk1 qblock optionblock tall" data-player="1" data-answer="off">
                             <h2>Player 2:</h2>
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <!-- <div class="col">
                     <div class="row">
-                        <div class="nameblk1 qblock optionblock tall" data-player="2" data-answer="are">
+                        <div class="nameblk1 qblock optionblock tall" data-player="2" data-answer="back">
                             <h2>Player 3:</h2>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
 
@@ -69,7 +70,7 @@
             <button class="button" data-timemode="1">
                 <a href="javascript:void(0);" id="startGame">
                     <img src="../img/Gamesettingsbtn.png" alt="btn" height="110px"></button>
-            <img src="../img/multiplayerrules.png" alt="btn" height="300px" style="
+            <img src="../img/ROLFrules.png" alt="btn" height="300px" style="
         margin-top: 15px;
         margin-bottom: 150px;
         border-radius: 25px;
@@ -171,51 +172,60 @@
                     <span class="bar">
                         <p>Player 2</p>
                     </span>
-                    <span class="bar">
+                    <!-- <span class="bar">
                         <p>Player 3</p>
-                    </span>
+                    </span> -->
                 </div>
 
                 <div class="row" id="answers">
                     <div class="col">
                         <div class="row">
-                            <div class="nameblk1 qblock optionblock" data-player="0" data-answer="am">
-                                <h2>am</h2>
+                            <div class="nameblk1 qblock optionblock" data-player="0" data-answer="on">
+                                <h2>on</h2>
                             </div>
-                            <div class="nameblk1 qblock optionblock" data-player="0" data-answer="is">
-                                <h2>is</h2>
+                            <div class="nameblk1 qblock optionblock" data-player="0" data-answer="off">
+                                <h2>off</h2>
                             </div>
-                            <div class="nameblk1 qblock optionblock" data-player="0" data-answer="are">
-                                <h2>are</h2>
+                            <div class="nameblk1 qblock optionblock" data-player="0" data-answer="back">
+                                <h2>back</h2>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="row">
-                            <div class="nameblk1 qblock optionblock" data-player="1" data-answer="am">
-                                <h2>am</h2>
-                            </div>
-                            <div class="nameblk1 qblock optionblock" data-player="1" data-answer="is">
-                                <h2>is</h2>
-                            </div>
-                            <div class="nameblk1 qblock optionblock" data-player="1" data-answer="are">
-                                <h2>are</h2>
+                            <div class="nameblk1 qblock optionblock" data-player="0" data-answer="get">
+                                <h2>get</h2>
                             </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="row">
-                            <div class="nameblk1 qblock optionblock" data-player="2" data-answer="am">
-                                <h2>am</h2>
+                            <div class="nameblk1 qblock optionblock" data-player="1" data-answer="on">
+                                <h2>on</h2>
                             </div>
-                            <div class="nameblk1 qblock optionblock" data-player="2" data-answer="is">
-                                <h2>is</h2>
+                            <div class="nameblk1 qblock optionblock" data-player="1" data-answer="off">
+                                <h2>off</h2>
                             </div>
-                            <div class="nameblk1 qblock optionblock" data-player="2" data-answer="are">
-                                <h2>are</h2>
+                            <div class="nameblk1 qblock optionblock" data-player="1" data-answer="back">
+                                <h2>back</h2>
+                            </div>
+                            <div class="nameblk1 qblock optionblock" data-player="1" data-answer="get">
+                                <h2>get</h2>
                             </div>
                         </div>
                     </div>
+                    <!-- <div class="col">
+                        <div class="row">
+                            <div class="nameblk1 qblock optionblock" data-player="2" data-answer="on">
+                                <h2>on</h2>
+                            </div>
+                            <div class="nameblk1 qblock optionblock" data-player="2" data-answer="off">
+                                <h2>off</h2>
+                            </div>
+                            <div class="nameblk1 qblock optionblock" data-player="2" data-answer="back">
+                                <h2>back</h2>
+                            </div>
+                            <div class="nameblk1 qblock optionblock" data-player="2" data-answer="get">
+                                <h2>get</h2>
+                            </div>
+                        </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -269,139 +279,76 @@
 
             var thiskey;
             var options_easy = {
-                "I _____ going to the shop.": "am",
-                "It _____ too big to carry.": "is",
-                "She _____ in the classroom.": "is",
-                "He _____ playing outside.": "is",
-                "The cup _____ blue.": "is",
-                "The boy _____ having a bad day.": "is",
-                "Bethany _____ on her bike.": "is",
-                "We _____ together. ": "are",
-                "They _____ the loudest group.": "are",
-                "The chairs _____ made from wood.": "are",
-                "Children _____ pushing and shoving.": "are",
-                "My teacher _____ full of energy.": "is",
-                "Our teachers _____ eating lunch.": "are",
-                "Your parents _____ very caring.": "are",
-                "His dad _____ good at drawing.": "is",
-                "My mum _____ reading in the kitchen.": "is",
-                "The table _____ large.": "is",
-                "His eyes _____ bright green.": "are",
-                "The people _____ in the airport.": "are",
-                "The person _____ holding their phone.": "is",
-                "Your friend _____ very nice.": "is",
-                "I _____ with my dog.": "am",
-                "It _____ the best day ever.": "is",
-                "She _____ taller than him.": "is",
-                "He _____ studying inside.": "is",
-                "The cup _____ full of milk.": "is",
-                "The boy _____ busy with his homework.": "is",
-                "Ivan _____ afraid of the dark.": "is",
-                "We _____ working well as a team.": "are",
-                "They _____ talking about the news.": "are",
-                "The chairs _____ all over the place.": "are",
-                "Children _____ behaving well.": "are",
-                "I ________ finding my key. ": "am",
-                "I ________ happy today.": "am",
-                "I ________ always on time.": "am",
-                "I ________ full of joy. ": "am",
-                "I ________ a girl.": "am",
-                "I ________ seven years old.": "am",
-                "I ________ from a large country.": "am",
-                "I ________ excited to see the movie.": "am",
-                "I ________ interested in fossils.": "am",
-                "I ________ the tallest in my class.": "am",
-                "I ________ the fastest runner. ": "am",
-                "I ________ excited to make friends.": "am",
-                "I ________ never too full for cake.": "am",
-                "I ________ watching my little brother play. ": "am",
-                "I ________ often playing games with my siblings. ": "am",
+                "____ up": "back",
+                "____ up": "back",
+                "cut ____ on": "back",
+                "drop ____": "back",
+                "get ____ at": "back",
+                "get ____ into": "back",
+                "get ____": "back",
+                "go ____": "back",
+                "grow ____": "back",
+                "think ____": "back",
+                "call ____": "back",
+                "get ____": "back",
+                "give ____": "back",
+                "hold ____": "back",
+                "pay ____": "back",
+                "send ____": "back",
+                "take ____": "back",
+                "____ along/on": "get",
+                "____ around": "get",
+                "____ away with": "get",
+                "____ away": "get",
+                "____ back at": "get",
+                "____ back into": "get",
+                "____ back": "get",
+                "____ on": "get",
+                "____ over": "get",
+                "____ over": "get",
+                "____ round to": "get",
+                "____ across/": "get",
+                "____ back": "get",
+                "____ together": "get",
+                "____ up": "get",
+                "____ up": "get",
+                "show ____": "off",
+                "take ____": "off",
+                "wear ____": "off",
+                "cut ____": "off",
+                "cut ____": "off",
+                "cut ____": "off",
+                "show ____": "off",
+                "switch ____": "off",
+                "take ____": "off",
+                "turn ____": "off",
+                "put ____": "off",
+                "switch ____": "off",
+                "take ____": "off",
+                "turn ____": "off",
+                "call ____": "on",
+                "call ____": "on",
+                "count ____": "on",
+                "get ____": "on",
+                "hang ____": "on",
+                "hold ____": "on",
+                "keep ____": "on",
+                "cut back ____": "on",
+                "look down ____": "on",
+                "Put ____": "on",
+                "switch ____": "on",
+                "try ____": "on",
+                "turn ____": "on",
+                "log ____": "on",
             };
 
             var options_medium = {
 
-                "My teacher _____ marking my work.": "is",
-                "Our teachers _____ walking with us.": "are",
-                "Your parents _____ waiting for you.": "are",
-                "His dad _____ building a time machine.": "is",
-                "My mum _____ always excited to see me.": "is",
-                "The table _____ in the hallway.": "is",
-                "His eyes _____ round and glistening.": "are",
-                "The people _____ lining up.": "are",
-                "She _____ not looking at you.": "is",
-                "Your friend _____ not at your party.": "is",
-                "She _____ happiest with her sister.": "is",
-                "He _____ caring and kind.": "is",
-                "The bag _____ on the table.": "is",
-                "The planet _____ orbiting the Sun.": "is",
-                "This month, I ________ working on my spellings. ": "am",
-                "Tomorrow, I ________ going to play tennis.": "am",
-                "Whenever someone is speaking, I ______ always listening.": "am",
-                "I _______ the youngest player on the basketball team.": "am",
-                "After school, I ________ going out for dinner.": "am",
-                "In the mornings, I ____ always organised. ": "am",
-                "How ____ I going to make friends at my new school?": "am",
-                "The new girl _______ very kind to everyone. ": "is",
-                "The answer _________ a mystery to me.": "is",
-                "Where _______ the new classroom?": "is",
-                "Daniel ________ a good artist. ": "is",
-                "The robot _________ fully charged and ready to be used!": "is",
-                "When _____ break time?": "is",
-                "August _______ the hottest month here. ": "is",
-                "In December, she ________  having her birthday party. ": "is",
-                "Elephants _______ quite dangerous.": "are",
-                "The tests _______ all in the same month.": "are",
-                "Schools _______ often open during the day. ": "are",
-                "New movies ____ often shown in cinemas. ": "are",
-                "Where ______ the children?": "are",
-                "How ______ you doing?": "are",
-                "What ______ the best shoes to buy?": "are",
-                "Cars _____ a great invention.": "are",
-                "Llamas _____ similar to camels. ": "are",
-                "There ______ many colours in the rainbow. ": "are",
-                "Why _______ parents often worried about us?": "are",
+               
             };
 
             var options_hard = {
 
-                "Jane and Bob _____ in the garden.": "are",
-                "The cat and dog _____ good friends.": "are",
-                "Their house _____ enormous. ": "is",
-                "His brothers _____ kind to him. ": "are",
-                "The fruit _____ in the bowl. ": "is",
-                "My sister and I _____ traveling to China.": "are",
-                "Everyone ______ at the party. ": "is",
-                "Someone ______ speaking to loudly. ": "is",
-                "Anyone ____ welcome to the dinner.": "is",
-                "Everybody ______ looking forward to the new year. ": "is",
-                "Somebody _____ going to bring the boardgames. ": "is",
-                "Water ________ good for you. ": "is",
-                "Sand ________ all over the car!": "is",
-                "Glass _______ delicate. ": "is",
-                "Hair ______ a great way to warm your head.": "is",
-                "Trousers _____ comfortable to wear. ": "are",
-                "Shoes ___ kept in the hall. ": "are",
-                "Scissors _______ used for cutting.": "are",
-                "Mice _______ living in our basement. ": "are",
-                "Chess _______ a great game.": "is",
-                "Listening _________ an important skill.": "is",
-                "Balance _____ great to prevent injury. ": "is",
-                "Studying _______ vital for good grades. ": "is",
-                "Reading _________ fun to do when you have spare time. ": "is",
-                "My band _______ always practising.": "is",
-                "Ben and Jenny ______ trying to find a nice house for themselves. ": "are",
-                "Both the teachers and the students ____ paying attention.": "are",
-                "The monkey and the panda ____ good friends. ": "are",
-                "The men ______ meeting later. ": "are",
-                "The women ______ taller than the girls. ": "are",
-                "The geese ____ so loud today.": "are",
-                "The box of cakes ________ on the table.": "is",
-                "The bag of sweets ____ in my room.": "is",
-                "The bars of chocolate _______ melting.": "are",
-                "The basket of fruit ____ in the market. ": "is",
-                "The box of chocolates _____ being shared by everyone.": "is",
-                "The pot of pens ____ for the children. ": "is",
-                "The packet of popcorn _____ still hot. ": "is",
             };
             var options;
 
@@ -509,12 +456,12 @@
                     }
                 };
             });
-            let scores = [0, 0, 0]; // Player 1, 2 and 3
+            let scores = [0, 0]; // Player 1, 2 
             var loadNextQuestion;
             var countdown;
             let firstToTen = false;
             function resetScores() {
-                scores = [0, 0, 0];
+                scores = [0, 0];
             }
             function setTimerToNextQuestion() {
                 loadNextQuestion = setTimeout(() => {
