--- a/onoffbackget-multiplayer/index.html
+++ b/onoffbackget-multiplayer/index.html
@@ -70,7 +70,7 @@
             <button class="button" data-timemode="1">
                 <a href="javascript:void(0);" id="startGame">
                     <img src="../img/Gamesettingsbtn.png" alt="btn" height="110px"></button>
-            <img src="../img/ROLFrules.png" alt="btn" height="300px" style="
+            <img src="../img/multiplayerrules.png" alt="btn" height="300px" style="
         margin-top: 15px;
         margin-bottom: 150px;
         border-radius: 25px;
