--- a/onoffbackget-twoplayer/index.html
+++ b/onoffbackget-twoplayer/index.html
@@ -21,7 +21,7 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet" />
     <!--new css file added-->
     <link rel="stylesheet" href="../css/fa/css/all.css">
-    <link rel="stylesheet" href="../onoffbackget-twoplayer/style.css" />
+    <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
@@ -165,16 +165,18 @@
                         <h1></h1>
                     </div>
                 </div>
+
+                <div style="background-color: rgba(88, 156, 72, 0.3); height: 170px;
+                padding: 20px 30px 10px 30px; border-radius: 5px;
+                 box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;">
                 <div id="resultsBar">
-                    <span class="bar">
+                    <span class="bar p1">
                         <p>Player 1</p>
                     </span>
-                    <span class="bar">
+                    <span class="bar p2">
                         <p>Player 2</p>
                     </span>
-                    <!-- <span class="bar">
-                        <p>Player 3</p>
-                    </span> -->
+                </div>
                 </div>
 
                 <div class="row" id="answers">
